--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -22,7 +22,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" href="#">Apartments</a>
       </li>
@@ -39,6 +39,15 @@
     {% block mainbody %}
 
     {% endblock %}
+
+<nav class="navbar fixed-bottom navbar-dark bg-custom">
+    <span class="navbar-text">
+      Castle apartments
+    </span>
+    <span class="navbar-text">
+        castle-apartments@castle-apartments.com
+    </span>
+</nav>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
