adding home page layout and fixing indentation

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -1,5 +1,48 @@
 {% extends 'base.html' %}
 
 {% block mainbody %}
-    <h3>Castle apartments home page</h3>
+    <div class="row m-3">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Search engine</h5>
+                    <p class="card-text">Add search options here</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Featured apartment</h5>
+                    <p class="card-text">Add apartment info here</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-deck m-3">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">New apartment</h5>
+                <p class="card-text">Info on new apartment</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">New apartment</h5>
+                <p class="card-text">Info on new apartment</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">New apartment</h5>
+                <p class="card-text">Info on new apartment</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">New apartment</h5>
+                <p class="card-text">Info on new apartment</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
