--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-custom">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'homepage' %}">
             <img src="{% static 'images/logo.png' %}", alt="castle apartments">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Apartments</a>
+                    <a class="nav-link" href="{% url 'apartment_list' %}">Apartments</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sellers</a>
