Sellers komið i gang

--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="{% url 'apartment_list' %}">Apartments</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sellers</a>
+                    <a class="nav-link" href="{% url 'sellers_list' %}">Sellers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Log in/Register</a>
