--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="{% url 'sellers_list' %}">Sellers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Log in/Register</a>
+                    <a class="nav-link" href="{% url 'login_register' %}">Log in/Register</a>
                 </li>
             </ul>
         </div>
