--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -1,3 +1,66 @@
 .bg-custom {
     background-color: #5e1d1d;
 }
+.login-column {
+    float:none;
+    margin:0 auto;
+}
+.login-btn {
+    width: 60%;
+}
+.red-color{
+    background-color:#5E1D1D;
+}
+.login-card{
+    border-width:10px;
+    border-color:#5E1D1D;
+    border-style:solid;
+}
+.username-label{
+    display:inline-block;
+    padding-right:40px;
+    float:left;
+}
+.password-label{
+    display:inline-block;
+    padding-right:44px;
+    float:left;
+}
+.forgot-password-label{
+    padding-left:70%;
+    padding-bottom:15px;
+}
+.user_input{
+    display: block;
+    width: 70%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+@media screen and (max-width: 1240px) {
+  body {
+    background-color: lightgreen;
+  }
+    .forgot-password-label{
+        padding-left:62%;
+    }
+}
+@media screen and (max-width: 1208px) {
+    .forgot-password-label{
+        padding-left:62%;
+    }
+}
+@media screen and (max-width: 1035px) {
+    .forgot-password-label{
+        padding-left:50%;
+    }
+}
