--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -4,10 +4,10 @@
 
 /* SLIDER */
 
-.price-range-block {
-    margin:60px;
+#slider-range {
+    width:100%;
+    background: #5e1d1d;
 }
-
 .sliderText{
     width:40%;
     margin-bottom:30px;
@@ -28,7 +28,7 @@
 }
 
 .price-range-search {
-    width:40.5%; 
+    width:100%;
     background-color: #f9f9f9; 
     border: 1px solid #6e6666;
     min-width: 40%;
@@ -40,7 +40,8 @@
     font-size:16px;
 }
 .price-range-field{
-    width:20%; 
+    width:30%;
+    margin: 0rem 1rem 0rem 0rem;
     min-width: 16%;
     background-color:#f9f9f9; 
     border: 1px solid #6e6666; 
@@ -52,10 +53,38 @@
     padding:5px;
 }
 .search-results-block{
+    width:100%;
     position: relative;
     display: block;
     clear: both;
 }
+.price-range-block {
+    width:100%;
+}
 
 /* END SLIDER */
 
+
+.expander {
+    background: gray;
+    width:100%
+}
+
+.item {
+    font-size: 1.5rem;
+}
+.item .zip_option {
+    font-size:1rem;
+    margin-left:1rem
+}
+.item a, .item p {
+    height:0.8rem;
+    display:none;
+}
+.item h4 i:hover {
+    text-decoration: underline;
+    cursor:pointer;
+}
+.item h4 {
+    margin-bottom:0;
+}
