--- a/Castle/templates/login_register.html
+++ b/Castle/templates/login_register.html
@@ -52,7 +52,7 @@
                             <input type="text" class="user_input" id="search_address" placeholder="Password">
                         </div>
                         <div class="forgot-password-label">
-                            <a href="#">Forgot password</a>
+                            <a href="/users/forgot_pass">Forgot password</a>
                         </div>
                         <div class="form-row text-center">
                             <div class="form-group col-6">
