--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -105,7 +105,7 @@
 				<div id="zip_codes">
 					<div class="item">
 						<h4><i data-area='capital_area' data-all="choose_all_capital" id="open_capital" class="fas fa-plus-square"></i> Höfuðborgarsvæðið</h4>
-						<a href="#" id="choose_all_capital" data-area="capital_area" class="zip_option capital_area btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_capital" data-area="capital_area" class="zip_option capital_area btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option capital_area"><input type="checkbox" />  101 - Miðbær</p>
 						<p class="zip_option capital_area"><input type="checkbox" />  103 - Kringlan/Hvassal</p>
 						<p class="zip_option capital_area"><input type="checkbox" />  104 - Vogar</p>
@@ -137,7 +137,7 @@
 
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='sudurnes' data-all="choose_all_sudurnes" id="open_sudurnes" class="fas fa-plus-square"></i> Suðurnes</h4>
-						<a href="#" id="choose_all_sudurnes" data-area="sudurnes" class="zip_option sudurnes btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_sudurnes" data-area="sudurnes" class="zip_option sudurnes btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option sudurnes"><input type="checkbox" />  230 - Keflavík</p>
 						<p class="zip_option sudurnes"><input type="checkbox" />  232 - Keflavík</p>
 						<p class="zip_option sudurnes"><input type="checkbox" />  233 - Hafnir</p>
@@ -152,7 +152,7 @@
 
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='nordurland' data-all="choose_all_nordurland" id="open_nordurland" class="fas fa-plus-square"></i> Norðurland</h4>
-						<a href="#" id="choose_all_nordurland" data-area="nordurland" class="zip_option nordurland btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_nordurland" data-area="nordurland" class="zip_option nordurland btn-secondary btn-sm">Choose all</a>
 							<p class="zip_option nordurland"><input type="checkbox" />  500 - Staður</p>
 							<p class="zip_option nordurland"><input type="checkbox" />  510 - Hólmavík</p>
 							<p class="zip_option nordurland"><input type="checkbox" />  520 - Drangsnes</p>
@@ -195,7 +195,7 @@
 					
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='vestfirdir' data-all="choose_all_vestfirdir" id="open_vestfirdir" class="fas fa-plus-square"></i> Vestfirðir</h4>
-						<a href="#" id="choose_all_vestfirdir" data-area="vestfirdir" class="zip_option vestfirdir btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_vestfirdir" data-area="vestfirdir" class="zip_option vestfirdir btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option vestfirdir"><input type="checkbox" />  400 - Ísafjörður</p>
 						<p class="zip_option vestfirdir"><input type="checkbox" />  401 - Ísafjörður</p>
 						<p class="zip_option vestfirdir"><input type="checkbox" />  410 - Hnífsdalur</p>
@@ -213,7 +213,7 @@
 					
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='vesturland' data-all="choose_all_vesturland" id="open_vesturland" class="fas fa-plus-square"></i> Vesturland</h4>
-						<a href="#" id="choose_all_vesturland" data-area="vesturland" class="zip_option vesturland btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_vesturland" data-area="vesturland" class="zip_option vesturland btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option vesturland"><input type="checkbox" /> 300 - Akranes</p>
 						<p class="zip_option vesturland"><input type="checkbox" /> 301 - Akranes</p>
 						<p class="zip_option vesturland"><input type="checkbox" /> 302 - Akranes</p>
@@ -233,7 +233,7 @@
 					
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='austurland' data-all="choose_all_austurland" id="open_austurland" class="fas fa-plus-square"></i> Austurland</h4>
-						<a href="#" id="choose_all_austurland" data-area="austurland" class="zip_option austurland btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_austurland" data-area="austurland" class="zip_option austurland btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option austurland"><input type="checkbox" /> 685 - Bakkafjörður</p>
 						<p class="zip_option austurland"><input type="checkbox" /> 690 - Vopnafjörður</p>
 						<p class="zip_option austurland"><input type="checkbox" /> 700 - Egilsstaðir</p>
@@ -255,7 +255,7 @@
 					
 					<div class="item">
 						<h4 style="margin-bottom:0"><i data-area='sudurland' data-all="choose_all_sudurland" id="open_sudurland" class="fas fa-plus-square"></i> Suðurland</h4>
-						<a href="#" id="choose_all_sudurland" data-area="sudurland" class="zip_option sudurland btn-secondary btn-sm">Velja allt</a>
+						<a href="#" id="choose_all_sudurland" data-area="sudurland" class="zip_option sudurland btn-secondary btn-sm">Choose all</a>
 						<p class="zip_option sudurland"><input type="checkbox" /> 800 - Selfoss</p>
 						<p class="zip_option sudurland"><input type="checkbox" /> 801 - Selfoss</p>
 						<p class="zip_option sudurland"><input type="checkbox" /> 802 - Selfoss</p>
@@ -279,7 +279,7 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
+				<button type="button" class="btn btn-primary">Save</button>
 			</div>
 			</div>
 		</div>
