Prep for about us and contact us

--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -42,10 +42,10 @@
 
     <nav class="navbar fixed-bottom navbar-dark bg-custom">
         <span class="navbar-text">
-          Castle apartments
+            <a href = '/site_information/about_us'> Castle apartments <br> About us</a>
         </span>
         <span class="navbar-text">
-            castle-apartments@castle-apartments.com
+            <a href = "contact"> castle@castle-apartments.com <br> Contact us
         </span>
     </nav>
 
