--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -46,7 +46,7 @@
             <a href = '/site_information/about_us'> Castle apartments <br> About us</a>
         </span>
         <span class="navbar-text">
-            <a href = "contact"> castle@castle-apartments.com <br> Contact us
+            <a href = '/site_information/contact_us'> castle@castle-apartments.com <br> Contact us</a>
         </span>
     </nav>
 
