--- a/Castle/templates/apartments/single_apartment.html
+++ b/Castle/templates/apartments/single_apartment.html
@@ -1,16 +1,17 @@
-<div class="card w-25 apartment-card m-2 red-color text-white">
+<div class="w-25 gray-background border-shadow m-2">
+   <div class="card bg-custom border-shadow text-white">
     <img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic">
-    <div class="card-body">
-        <h5 class="card-title">{{ apartment.address }} {{ apartment.zip_code }}</h5>
-        <p>{{ apartment.price }}</p>
-        <div class="d-flex justify-content-between">
-            <div>
-                <p>{{ apartment.size }} sqm</p>
-            </div>
-            <div>
-                <p>Rooms: {{ apartment.rooms }}</p>
+        <div class="card-body">
+            <h5 class="card-title">{{ apartment.address }} {{ apartment.zip_code }}</h5>
+            <p>{{ apartment.price }}</p>
+            <div class="d-flex justify-content-between">
+                <div>
+                    <p>{{ apartment.size }} sqm</p>
+                </div>
+                <div>
+                    <p>Rooms: {{ apartment.rooms }}</p>
+                </div>
             </div>
         </div>
-
     </div>
 </div>
