--- a/Castle/templates/sellers/single_seller.html
+++ b/Castle/templates/sellers/single_seller.html
@@ -1,11 +1,13 @@
-<div class="row m-3">
-    <div class="col-3">
-        <img src="{{ seller.logo }}" class="img-thumbnail" alt="seller logo">
-    </div>
-    <div class="col-9">
-        <h5>{{ seller.user.name }}</h5>
-        <p>E-mail: {{ seller.user.email }}</p>
-        <p>Phone: {{ seller.user.phone }}</p>
-        <p>Address: {{ seller.address }}</p>
+<div class="gray-background border-shadow m-2">
+    <div class="white-background border-shadow">
+        <div class="d-inline-block w-25">
+            <img src="{{ seller.logo }}" class="img-thumbnail" alt="seller logo">
+        </div>
+        <div class="d-inline-block w-25">
+            <h5>{{ seller.user.name }}</h5>
+            <p>E-mail: {{ seller.user.email }}</p>
+            <p>Phone: {{ seller.user.phone }}</p>
+            <p>Address: {{ seller.address }}</p>
+        </div>
     </div>
 </div>
