added styling to search engine

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -2,8 +2,8 @@
 
 {% block mainbody %}
 	<div class="row m-3">
-		<div class="col-sm-6">
-			<div class="card">
+		<div class="col-sm-6 red-background border-shadow">
+			<div class="card border-shadow">
 				<div class="card-body">
 					<h5 class="card-title">Search engine</h5>
 					<form>
