styling on homepage

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -70,8 +70,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6">
-			<div class="card">
+		<div class="col-sm-6 gray-background border-shadow">
+			<div class="card border-shadow bg-custom text-white">
 				<div class="card-body">
 					<h5 class="card-title">Featured apartment</h5>
 					<p class="card-text">Add apartment info here</p>
