center text inputs for mobile view

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -32,11 +32,11 @@
 							<div class="price-range-block">
 								<div id="slider-range" class="price-filter-range" name="rangeInput"></div>
 								<div class="slide-prices-container" style="margin:0.5rem auto;text-align:center">
-									<div class="min_price">
+									<div class="min_price" style="margin:auto">
 										<span class="input-group-addon">ISK</span>
 										<input type="text" placeholder="Min price" min=0 autocomplete="off" max="199999999" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='20000000');" id="min_price" class="price-range-field" />
 									</div>
-									<div class="max_price">
+									<div class="max_price" style="margin:auto">
 										<span class="input-group-addon">ISK</span>
 										<input type="text" placeholder="Max price" min=0 autocomplete="off" max="200000000" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='90000000');" id="max_price" class="price-range-field" />
 									</div>
@@ -48,11 +48,11 @@
 							<div class="size-range-block">
 								<div id="size-range" class="size-filter-range" name="rangeInput"></div>
 								<div class="slide-sizes-container" style="margin:0.5rem auto;text-align:center">
-									<div class="min_size">
+									<div class="min_size" style="margin:auto">
 										<span class="input-group-addon">SQM</span>
 										<input type="text" placeholder="Min size" min=0 autocomplete="off" max="499" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='40');" id="min_size" class="size-range-field" />
 									</div>
-									<div class="max_size">
+									<div class="max_size" style="margin:auto">
 										<span class="input-group-addon">SQM</span>
 										<input type="text" placeholder="Max size" min=0 autocomplete="off" max="500" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='250');" id="max_size" class="size-range-field" />
 									</div>
