some styling for search engine and buttons

--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -58,8 +58,8 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-12 text-right">
-                            <button id="clearFormButton" class="btn btn-secondary">Clear</button>
-                            <button id="submitFormButton" type="submit" class="btn btn-success">Search</button>
+                            <button id="clearFormButton" class="btn red-button">Clear</button>
+                            <button id="submitFormButton" type="submit" class="btn green-button">Search</button>
                         </div>
                     </div>
                 </form>
