--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -33,12 +33,12 @@
 								<div id="slider-range" class="price-filter-range" name="rangeInput"></div>
 								<div class="slide-prices-container" style="margin:0.5rem auto;text-align:center">
 									<div class="min_price">
-										<span class="input-group-addon">ISK</span>
-										<input type="text" placeholder="Min price" min=0 autocomplete="off" max="199999999" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='20000000');" id="min_price" class="price-range-field" />
+										<span class="input-group-addon m-1">ISK</span>
+										<input type="text" placeholder="Min price" min=0 autocomplete="off" max="199999999" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='20000000');" id="min_price" class="price-range-field form-control m-1" />
 									</div>
 									<div class="max_price">
-										<span class="input-group-addon">ISK</span>
-										<input type="text" placeholder="Max price" min=0 autocomplete="off" max="200000000" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='90000000');" id="max_price" class="price-range-field" />
+										<span class="input-group-addon m-1">ISK</span>
+										<input type="text" placeholder="Max price" min=0 autocomplete="off" max="200000000" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='90000000');" id="max_price" class="price-range-field form-control m-1" />
 									</div>
 								</div>
 							</div>
@@ -49,12 +49,12 @@
 								<div id="size-range" class="size-filter-range" name="rangeInput"></div>
 								<div class="slide-sizes-container" style="margin:0.5rem auto;text-align:center">
 									<div class="min_size">
-										<span class="input-group-addon">SQM</span>
-										<input type="text" placeholder="Min size" min=0 autocomplete="off" max="499" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='40');" id="min_size" class="size-range-field" />
+										<span class="input-group-addon m-1">SQM</span>
+										<input type="text" placeholder="Min size" min=0 autocomplete="off" max="499" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='40');" id="min_size" class="size-range-field form-control m-1" />
 									</div>
 									<div class="max_size">
-										<span class="input-group-addon">SQM</span>
-										<input type="text" placeholder="Max size" min=0 autocomplete="off" max="500" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='250');" id="max_size" class="size-range-field" />
+										<span class="input-group-addon m-1">SQM</span>
+										<input type="text" placeholder="Max size" min=0 autocomplete="off" max="500" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='250');" id="max_size" class="size-range-field form-control m-1" />
 									</div>
 								</div>
 							</div>
@@ -62,8 +62,8 @@
 						<br>
 						<div class="form-row">
 							<div class="form-group col-12" style="text-align: right">
-								<button id="clearFormButton" class="btn btn-secondary">Clear</button>
-								<button id="submitFormButton" type="submit" class="btn btn-success">Search</button>
+								<button id="clearFormButton" class="btn red-button">Clear</button>
+								<button id="submitFormButton" type="submit" class="btn green-button">Search</button>
 							</div>
 						</div>
 					</form>
