--- a/Castle/templates/users/login_register.html
+++ b/Castle/templates/users/login_register.html
@@ -20,10 +20,10 @@
                         </div>
                         <div class="form-row text-center">
                             <div class="form-group col-6">
-                                <button class="btn btn-secondary login-btn bg-custom">Register</button>
+                                <button class="btn red-button">Register</button>
                             </div>
                             <div class="form-group col-6">
-                                <button type="submit" class="btn btn-success login-btn">Login</button>
+                                <button type="submit" class="btn green-button">Login</button>
                             </div>
                         </div>
                     </form>
