--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -23,6 +23,20 @@
     background-color: #5E1D1D;
     padding: 1rem;
 }
+.red-button {
+    background: #5E1D1D;
+    color: white;
+    width: 8rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+.green-button {
+    background: #257E29;
+    color: white;
+    width: 8rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
 #slider-range, #size-range {
     width:100%;
     background: #5e1d1d;
@@ -37,9 +51,6 @@
 .login-column {
     float:none;
     margin:0 auto;
-}
-.login-btn {
-    width: 60%;
 }
 .username-label{
     display:inline-block;
@@ -77,7 +88,6 @@
     background: gray;
     width:100%
 }
-
 .item {
     font-size: 1.5rem;
 }
@@ -95,9 +105,6 @@
 }
 .item h4 {
     margin-bottom:0;
-}
-.reset_btn{
-    width:40%;
 }
 #choose_rooms {
     display:none;
