--- a/Castle/templates/users/forgot_pass.html
+++ b/Castle/templates/users/forgot_pass.html
@@ -14,7 +14,7 @@
                         </div>
                         <div class="form-row text-center">
                             <div class="form-group col-sm-12">
-                                <button class="btn btn-secondary login-btn bg-custom reset_btn">Reset</button>
+                                <button class="btn red-button">Reset</button>
                             </div>
                         </div>
                     </form>
