--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -74,8 +74,7 @@
             <div class="col-6">
                 <label for="order_by">Order by</label>
                 <select id="order_by" class="form-control">
-                    <option selected>Default</option>
-                    <option>Name a..z</option>
+                    <option selected>Name a..z</option>
                     <option>Name z..a</option>
                     <option>Price highest</option>
                     <option>Price lowest</option>
