--- a/Castle/static/css/style.css
+++ b/Castle/static/css/style.css
@@ -170,3 +170,12 @@ input[type="checkbox"]
         float:left
     }
 }
+
+/* .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center; 
+} */
