--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="{% url 'sellers_list' %}">Sellers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login_register' %}">Log in/Register</a>
+                    <a class="nav-link" href="{% url 'login' %}">Log in</a> / <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
 
     {% endblock %}
 
-    <nav class="footer navbar-dark bg-custom">
+    <footer class="footer navbar-dark bg-custom">
         <div class="row mx-2">
             <div class="col-6">
                 <span class="navbar-text">
@@ -54,8 +54,8 @@
                 </span>
             </div>
         </div>
-    </nav>
-
+    </footer>
+    
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
