--- a/Castle/templates/base.html
+++ b/Castle/templates/base.html
@@ -27,11 +27,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'apartment_list' %}">Apartments</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item sellers-nav" style="border-right: 1px solid rgba(255,255,255,.5);padding-right:0.8rem">
                     <a class="nav-link" href="{% url 'sellers_list' %}">Sellers</a>
                 </li>
+                <li class="nav-item login-nav" style="padding-left:0.8rem">
+                    <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'login' %}">Log in</a> / <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    <a class="nav-link" href="{% url 'register' %}">Register</a>
                 </li>
             </ul>
         </div>
