--- a/Castle/templates/apartments/single_apartment.html
+++ b/Castle/templates/apartments/single_apartment.html
@@ -1,5 +1,5 @@
 <div class="single-apartment gray-background border-shadow">
-   <div class="card bg-custom border-shadow text-white">
+   <div class="card bg-custom border-shadow text-white" style="text-align:left">
     <img class="card-img-top" src="{{ apartment.main_pic }}" alt="apartment pic">
         <div class="card-body">
             <h5 class="card-title"><a href="{{ apartment.id }}">{{ apartment.address }} {{ apartment.zip_code }}</a></h5>
