working on seller list and added seller info page

--- a/Castle/templates/sellers/sellers_list.html
+++ b/Castle/templates/sellers/sellers_list.html
@@ -2,8 +2,10 @@
 
 {% block mainbody %}
 
-    {% for seller in sellers %}
-        {% include 'sellers/single_seller.html' with seller=seller %}
-    {% endfor %}
+    <div class="w-100 p-3">
+        {% for seller in sellers %}
+            {% include 'sellers/single_seller.html' with seller=seller %}
+        {% endfor %}
+    </div>
 
 {% endblock %}
