--- a/Castle/templates/sellers/single_seller.html
+++ b/Castle/templates/sellers/single_seller.html
@@ -1,13 +1,19 @@
-<div class="gray-background border-shadow m-2">
-    <div class="white-background border-shadow">
-        <div class="d-inline-block w-25">
-            <img src="{{ seller.logo }}" class="img-thumbnail" alt="seller logo">
-        </div>
-        <div class="d-inline-block w-25">
-            <h5>{{ seller.user.name }}</h5>
-            <p>E-mail: {{ seller.user.email }}</p>
-            <p>Phone: {{ seller.user.phone }}</p>
-            <p>Address: {{ seller.address }}</p>
+<div class="w-100 gray-background border-shadow">
+    <div class="card white-background border-shadow">
+        <div class="card-body row p-0">
+            <div class="col-3">
+                <img src="{{ seller.logo }}" class="img-thumbnail simple-border" alt="seller logo">
+            </div>
+            <div class="col-4">
+                <h5><a href="{{ seller.id }}">{{ seller.user.name }}</a></h5>
+                <p>E-mail: {{ seller.user.email }}</p>
+                <p>Phone: {{ seller.user.phone }}</p>
+                <p>Address: {{ seller.address }}</p>
+            </div>
+            <div class="col-5">
+                <p>Description:</p>
+                <p>{{ seller.description }}</p>
+            </div>
         </div>
     </div>
 </div>
