working on seller list and added seller info page

--- a/Castle/templates/sellers/seller_info.html
+++ b/Castle/templates/sellers/seller_info.html
@@ -10,7 +10,7 @@
                         <img src="{{ seller.logo }}" class="img-thumbnail simple-border" alt="seller logo">
                     </div>
                     <div class="col-7">
-                        <h5><a href="{{ seller.id }}">{{ seller.user.name }}</a></h5>
+                        <h5>{{ seller.user.name }}</h5>
                         <p>E-mail: {{ seller.user.email }}</p>
                         <p>Phone: {{ seller.user.phone }}</p>
                         <p>Address: {{ seller.address }}</p>
